--- a/MaquetteHTML/css/style_accueil_nonconnecte.css
+++ b/MaquetteHTML/css/style_accueil_nonconnecte.css
@@ -13,6 +13,7 @@ body {
     background-color:black;
     background-image:url(../images/fond.png);
     background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 #logo_accueil {
