--- a/MaquetteHTML/css/style_accueil_nonconnecte.css
+++ b/MaquetteHTML/css/style_accueil_nonconnecte.css
@@ -25,8 +25,10 @@ body {
 #partie_centrale {
     margin-top:250px;
     position: absolute;
+    width: 100%;
 }
 #img_barre {
     height: 500px;
-    margin-left: 962px;
+    /*margin-left: 962px;*/
+    margin-left: 50%;
 }
