--- a/MaquetteHTML/css/style_accueil_nonconnecte.css
+++ b/MaquetteHTML/css/style_accueil_nonconnecte.css
@@ -21,7 +21,7 @@ body {
 }
 
 #logo_accueil {
-    width: 100%;
+
     position:absolute;
     margin-left: 45%;
     margin-top:1%;
@@ -31,21 +31,18 @@ body {
     margin-top:250px;
     position: absolute;
     width: 100%;
-}
-#img_barre {
-    height: 500px;
-    /*margin-left: 962px;*/
-    margin-left: 50%;
+    height:100%;
 }
 
-#partie_centrale_gauche {
-    float: left;
-    background-color: green;
-    width:50%;
+#tableau_accueil {
+    width: 100%;
+    height:50%;
 }
-#partie_centrale_droite {
-    float:right;
-    background-color: red;
-    margin-left: 50%;
+
+#tableau_accueil td:first-child{
+    border-right: 5px white solid;
+}
+
+#tableau_accueil td{
     width: 50%;
 }
