--- a/MaquetteHTML/css/style_chat_nonconnecte.css
+++ b/MaquetteHTML/css/style_chat_nonconnecte.css
@@ -22,8 +22,20 @@ body {
     color: white;
 }
 
-#section {
-    background-color: blue;
+table {
+    margin-right: auto;
+    margin-left: auto;
+    text-align:center;
+    overflow:hidden;
+}
+
+td {
+    border: solid 1px black;
+}
+
+td>img {
+    height: 440px;
+    width: auto;
 }
 
 #salon {
@@ -45,7 +57,89 @@ li {
     padding-bottom: 10px;
 }
 
-#boutonAuRevoir {
+.btn-1 {
+  background-color: #F27935;
+}
+.btn-1 .round {
+  background-color: #f59965;
+}
+
+.type-1 {
     float: right;
     margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  padding: 6px 53px 6px 23px;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: sans-serif;
+  font-weight: bold;
+  position: relative;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  display: inline-block;
+}
+a span {
+  position: relative;
+  z-index: 3;
+}
+a .round {
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  z-index: 2;
+}
+a .round i {
+  position: absolute;
+  top: 50%;
+  margin-top: -6px;
+  left: 50%;
+  margin-left: -4px;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.txt {
+  font-size: 12px;
+  line-height: 1.45;
+}
+
+.type-1 a:hover {
+  padding-left: 48px;
+  padding-right: 28px;
+}
+.type-1 a:hover .round {
+  width: calc(100% - 6px);
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+}
+.type-1 a:hover .round i {
+  left: 12%;
+}
+
+#volumeGeneral {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    margin-left: 1.5%;
+    margin-bottom: 1%;
 }
