--- a/MaquetteHTML/css/style_chat_nonconnecte.css
+++ b/MaquetteHTML/css/style_chat_nonconnecte.css
@@ -12,7 +12,10 @@ body {
     margin-right: auto;
     margin-left: auto;
     text-align:center;
-    overflow:hidden;
+    overflow: hidden;
+    width: 100px;
+    height: auto;
+    margin-top: 30px
 }
 
 #aside {
@@ -22,24 +25,50 @@ body {
     color: white;
 }
 
-table {
+#section {
     margin-right: auto;
     margin-left: auto;
     text-align:center;
     overflow:hidden;
+    height: 100%;
 }
 
-td {
-    border: solid 1px black;
+@media screen and (min-width: 1024px) {
+    div>img {
+        height: 257px;
+        width: auto;
+    }
+}
+@media screen and (min-width: 1280px) {
+    div>img {
+        height: 337px;
+        width: auto;
+    }
 }
 
-td>img {
-    height: 440px;
-    width: auto;
+@media screen and (min-width: 1440px) {
+    div>img {
+        height: 387px;
+        width: auto;
+    }
+}
+
+@media screen and (min-width: 1680px) {
+    div>img {
+        height: 462px;
+        width: auto;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    div>img {
+        height: 537px;
+        width: auto;
+    }
 }
 
 #salon {
-    margin-top: 50px;
+    margin-top: 20px;
     text-align: center;
     font-size: 20px;
 }
@@ -52,15 +81,27 @@ td>img {
     padding-right: 20px;
 }
 
+@media screen and (min-width: 1024px) {
+    ul {
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    ul {
+        margin-bottom: 50px;
+    }
+}
+
 li {
     list-style-type: none;
     padding-bottom: 10px;
 }
 
-.btn-1 {
+.bouton-1 {
   background-color: #F27935;
 }
-.btn-1 .round {
+.bouton-1 .round {
   background-color: #f59965;
 }
 
@@ -70,12 +111,12 @@ li {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
   -moz-border-radius: 30px;
   -webkit-border-radius: 30px;
   border-radius: 30px;
-  padding: 6px 53px 6px 23px;
-  color: #fff;
+  padding: 6px 53px 4px 23px;
+  color: #fff !important;
   text-transform: uppercase;
   font-family: sans-serif;
   font-weight: bold;
@@ -140,6 +181,19 @@ a .round i {
     position: absolute;
     bottom: 0;
     text-align: center;
-    margin-left: 1.5%;
+    margin-left: 3%;
     margin-bottom: 1%;
+}
+
+.volume {
+    width: 20%;
+    margin-left: 60%
+}
+
+.camera {
+    border: solid 1px black;
+}
+
+#user {
+    text-decoration: underline;
 }
