Correction de la merde de Michel

--- a/MaquetteHTML/css/style_accueil_nonconnecte.css
+++ b/MaquetteHTML/css/style_accueil_nonconnecte.css
@@ -47,16 +47,26 @@ body {
     width: 50%;
 } 
 
-.div_info{
+.p_info{
+    text-align: justify;
     margin-left: 20px;
-    width: 85%;
+    width: 95%;
 }
 
 h2{
     text-align: center;
 }
+#rejoindre_chat{
+    width: 40%;
+    text-align: center;
+    vertical-align: top;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-form{
-    text-align: right;
-    width: 85%;
+label {
+    display: block;
+    width: 150px;
+    float: left;
+    text-align: left;
 }
