--- a/MaquetteHTML/css/style_chat_nonconnecte.css
+++ b/MaquetteHTML/css/style_chat_nonconnecte.css
@@ -67,6 +67,16 @@ body {
     }
 }
 
+div>img {
+    padding: 30px;
+}
+
+#admin:after {
+   content: '\f219';
+   font-family: FontAwesome;
+   margin-left: 10px;
+}
+
 #salon {
     margin-top: 20px;
     text-align: center;
