--- a/MaquetteHTML/css/style.css
+++ b/MaquetteHTML/css/style.css
@@ -6,16 +6,8 @@ and open the template in the editor.
 /* 
     Created on : 9 oct. 2017, 10:54:54
     Author     : Thib
-*/body {
-    background-color: #FCFCFC;
-}
+*/
 
-.cover {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 1;
-}
 
 .blur-in {
     -webkit-animation: blur 2s forwards;
@@ -181,17 +173,30 @@ and open the template in the editor.
     padding-top: 100px;
 }
 
-span {
+.pop-up span {
     color: dimgray;
 }
 
-.pop-up {
-    position: relative;
+@media screen and (max-width: 800px) {
+    .pop-up {
+    position: absolute;
     width: 40%;
     padding-top: 10%;
-    margin-left: auto;
-    margin-right: auto;
+    min-width: 400px;
     z-index: 2;
+    display: none;
+}
+}
+@media screen and (min-width: 801px) {
+    .pop-up {
+    position: absolute;
+    width: 40%;
+    display: none;
+    padding-top: 10%;
+    left:30%;
+    min-width: 400px;
+    z-index: 2;
+}
 }
 
 .box {
@@ -233,40 +238,37 @@ span {
     color: #fff;
 }
 
-/* h3 {
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    color: #fff;
-    background-color: #FF704D;
-} */
 
 .form {
     padding: 20px 65px 10px 65px;
     color: dimgray;
 }
 
-h1 {
+.pop-up h1 {
     color: dimgray;
     font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
 }
 
-#tableau_accueil {
+.pop-up h2 {
+    color: black;
+}
+
+#tableau_popup {
     width: 100%;
 }
 
-#tableau_accueil tr:nth-child(2) td:first-child{
+#tableau_popup tr:nth-child(2) td:first-child{
     border-right: 5px black solid;
 }
 
-#tableau_accueil td{
+#tableau_popup td{
     vertical-align: top;
     padding: 0;
 } 
 
-form input[type="password"], 
-form input[type="text"], 
-form input[type="email"]{
+.pop-up form input[type="password"], 
+.pop-up form input[type="text"], 
+.pop-up form input[type="email"]{
 
     width: auto;
   
@@ -281,7 +283,7 @@ form input[type="email"]{
     outline: 0;
 }
 
-form button[type="submit"] {
+.pop-up form button[type="submit"] {
    
     margin-bottom: 32px;
     padding: 16px;
@@ -290,16 +292,16 @@ form button[type="submit"] {
     border-radius: 5px;
 }
 
-#tableau_accueil tr:nth-child(2) td:nth-child(2) button {
+#tableau_popup tr:nth-child(2) td:nth-child(2) button {
     margin-top: 144px;
     
 }
 
-form input[type="text"]:focus,
-form input[type="text"]:hover,
-form input[type="email"]:focus,
-form input[type="email"]:hover,
-form input[type="password"]:focus,
-form input[type="password"]:hover {
+.pop-up form input[type="text"]:focus,
+.pop-up form input[type="text"]:hover,
+.pop-up form input[type="email"]:focus,
+.pop-up form input[type="email"]:hover,
+.pop-up form input[type="password"]:focus,
+.pop-up form input[type="password"]:hover {
     background-color: #ccc;
 }
