Salut, je commit encore !

--- a/MaquetteHTML/css/style_chat_nonconnecte.css
+++ b/MaquetteHTML/css/style_chat_nonconnecte.css
@@ -77,6 +77,10 @@ div>img {
    margin-left: 10px;
 }
 
+#user {
+    text-decoration: underline;
+}
+
 #salon {
     margin-top: 20px;
     text-align: center;
