--- a/MaquetteHTML/css/style_chat_admin.css
+++ b/MaquetteHTML/css/style_chat_admin.css
@@ -77,6 +77,10 @@ div>img {
     font-size: 20px;
 }
 
+#user {
+    text-decoration: underline;
+}
+
 #participants {
     margin-top: 30px;
     text-align: center;
